--- a/src/app/clients/balance-account-teller/balance-account-teller.component.html
+++ b/src/app/clients/balance-account-teller/balance-account-teller.component.html
@@ -5,13 +5,13 @@
         <div class="fix_header" fxLayout="row" >
           <img src="../../../assets/images/icons/transaction_total.svg">
           <div style="margin: 5px; margin-top: 20px;">
-            <h3 style="margin: 5px;">Số tài khoản: {{accountFilter.length}}</h3>
+            <h3 style="margin: 5px;">{{ "ClientsComponent.BalanceAccountTellerComponent.h3" | translate }}{{accountFilter.length}}</h3>
           </div>
         </div>
         <div class="fix_header" fxLayout="row" >
           <img src="../../../assets/images/icons/money.svg">
           <div style="margin: 5px; margin-top: 20px;">
-            <h3 style="margin: 5px;">Số dư: <b style="color: green;">{{totalBalanceAmount | money}}</b></h3>
+            <h3 style="margin: 5px;">{{ "ClientsComponent.BalanceAccountTellerComponent.totalBalanceAmount" | translate }}<b style="color: green;">{{totalBalanceAmount | money}}</b></h3>
           </div>
         </div>
 
@@ -20,17 +20,17 @@
   <mat-card-content>
     <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroup]="formFilter">
       <mat-form-field fxFlex="31%">
-        <mat-label>Tên teller</mat-label>
+        <mat-label>{{ "ClientsComponent.BalanceAccountTellerComponent.tellerSourceName" | translate }}</mat-label>
         <input matInput formControlName="tellerSourceName">
       </mat-form-field>
 
       <mat-form-field fxFlex="31%">
-        <mat-label>Tên tài khoản</mat-label>
+        <mat-label>{{ "ClientsComponent.BalanceAccountTellerComponent.sourceInfo" | translate }}</mat-label>
         <input matInput formControlName="sourceInfo">
       </mat-form-field>
 
       <mat-form-field fxFlex="31">
-        <mat-label>Chi nhánh</mat-label>
+        <mat-label>{{ "ClientsComponent.BalanceAccountTellerComponent.officeName" | translate }}</mat-label>
         <input matInput formControlName="officeName">
       </mat-form-field>
       <!-- <div>
@@ -47,31 +47,31 @@
     <table mat-table class="mat-elevation-z8" (matSortChange)="sortData($event)" [dataSource]="accountsShow" matSort>
 
       <ng-container matColumnDef="tellerSourceName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Tên teller</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "ClientsComponent.BalanceAccountTellerComponent.tellerSourceName" | translate }}</th>
         <td mat-cell
             *matCellDef="let account"> {{ account.tellerSourceName}} </td>
       </ng-container>
 
       <ng-container matColumnDef="officeName">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Chi nhánh</th>
+        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>{{ "ClientsComponent.BalanceAccountTellerComponent.officeName" | translate }}</th>
         <td mat-cell fxHide fxShow.gt-md
             *matCellDef="let account"> {{ account.officeName}} </td>
       </ng-container>
 
       <ng-container matColumnDef="accountNo">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Mã tài khoản</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "ClientsComponent.BalanceAccountTellerComponent.accountNo" | translate }}</th>
         <td mat-cell
             *matCellDef="let account"> {{ account.accountNo}} </td>
       </ng-container>
 
       <ng-container matColumnDef="sourceInfo">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Tên tài khoản - số dư > 0</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "ClientsComponent.BalanceAccountTellerComponent.savingIdAndSourceInfo" | translate }}</th>
         <td mat-cell
             *matCellDef="let account"><a [routerLink]="['../','savings-accounts',account.savingId]">{{ account.sourceInfo}}</a></td>
       </ng-container>
 
       <ng-container matColumnDef="balance">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Số dư</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "ClientsComponent.BalanceAccountTellerComponent.balance" | translate }}</th>
         <td mat-cell
             *matCellDef="let account"> {{ account.balance | money}} </td>
       </ng-container>
