--- a/src/app/clients/clients-view/charges/view-charge/view-charge.component.html
+++ b/src/app/clients/clients-view/charges/view-charge/view-charge.component.html
@@ -1,15 +1,15 @@
 <div fxLayout="row" fxLayoutAlign="end" fxLayoutGap="2%" fxLayout.lt-md="column" class="container m-b-20">
   <button mat-raised-button color="primary" [routerLink]="['pay']" *midasHasPermission="'PAY_CLIENTCHARGE'">
     <fa-icon icon="dollar-sign"></fa-icon>&nbsp;&nbsp;
-    Pay
+    {{'Client_Component.ViewClient.Charges.View.btnPay' |translate}}
   </button>
   <button mat-raised-button color="primary" (click)="waiveCharge()" *midasHasPermission="'WAIVE_CLIENTCHARGE'">
     <i class="fa fa-flag"></i>
-    Waive Charge
+    {{'Client_Component.ViewClient.Charges.View.btnWaiveCharge' |translate}}
   </button>
   <button mat-raised-button color="primary" (click)="deleteCharge()">
     <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;
-    Delete
+    {{'Client_Component.ViewClient.Charges.View.btnDelete' |translate}}
   </button>
 </div>
 
@@ -32,41 +32,41 @@
           <tbody>
 
             <tr>
-              <td> Currency </td>
+              <td> {{'Client_Component.ViewClient.Charges.View.currency' |translate}} </td>
               <td> {{ chargeData.currency.name }} </td>
             </tr>
 
             <tr>
-              <td> Charge Time Type </td>
+              <td> {{'Client_Component.ViewClient.Charges.View.chargeTimeType' |translate}} </td>
               <td> {{ chargeData.chargeTimeType.value }} </td>
             </tr>
 
             <tr>
-              <td> Charge Calculation Type </td>
+              <td> {{'Client_Component.ViewClient.Charges.View.chargeCalculationType' |translate}} </td>
               <td> {{ chargeData.chargeCalculationType.value }} </td>
             </tr>
 
             <tr>
-              <td> Due as of </td>
+              <td> {{'Client_Component.ViewClient.Charges.View.dueDate' |translate}} </td>
               <td> {{ chargeData.dueDate | date }} </td>
             </tr>
 
             <tr>
-              <td> Due </td>
+              <td> {{'Client_Component.ViewClient.Charges.View.amount' |translate}} </td>
               <td> {{ chargeData.amount | money}} </td>
             </tr>
 
             <tr>
-              <td> Paid </td>
+              <td> {{'Client_Component.ViewClient.Charges.View.amountPaid' |translate}} </td>
               <td> {{ chargeData.amountPaid | money}} </td>
             </tr>
 
             <tr>
-              <td> Waived </td>
+              <td> {{'Client_Component.ViewClient.Charges.View.amountWaived' |translate}} </td>
               <td> {{ chargeData.amountWaived | money}} </td>
             </tr>
             <tr>
-              <td> Outstanding </td>
+              <td> {{'Client_Component.ViewClient.Charges.View.amountOutstanding' |translate}} </td>
               <td> {{ chargeData.amountOutstanding | money}} </td>
             </tr>
 
@@ -79,36 +79,36 @@
     </mat-card-content>
 
     <div fxLayout="row wrap" class="content" style="padding-top:10px">
-      <h1><b> Transactions </b></h1>
+      <h1><b> {{'Client_Component.ViewClient.Charges.View.h2' |translate}} </b></h1>
 
       <table mat-table [dataSource]="chargeData.clientTransactionDatas" *ngIf="chargeData.clientTransactionDatas">
 
         <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef> ID </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Client_Component.ViewClient.Charges.View.id' |translate}} </th>
           <td mat-cell *matCellDef="let element" [ngClass]="{'strikeoff':element.reversed}"> {{element.id}} </td>
         </ng-container>
 
         <ng-container matColumnDef="officeName">
-          <th mat-header-cell *matHeaderCellDef> Office Name </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Client_Component.ViewClient.Charges.View.officeName' |translate}} </th>
           <td mat-cell *matCellDef="let element" [ngClass]="{'strikeoff':element.reversed}"> {{element.officeName }} </td>
         </ng-container>
 
         <ng-container matColumnDef="type">
-          <th mat-header-cell *matHeaderCellDef> Type </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Client_Component.ViewClient.Charges.View.type' |translate}} </th>
           <td mat-cell *matCellDef="let element" [ngClass]="{'strikeoff':element.reversed}"> {{element.type.value}} </td>
         </ng-container>
         <ng-container matColumnDef="transactionDate">
-          <th mat-header-cell *matHeaderCellDef> Transaction Date </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Client_Component.ViewClient.Charges.View.transactionDate' |translate}} </th>
           <td mat-cell *matCellDef="let element" [ngClass]="{'strikeoff':element.reversed}"> {{element.date | date}} </td>
         </ng-container>
 
         <ng-container matColumnDef="amount">
-          <th mat-header-cell *matHeaderCellDef> Amount </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Client_Component.ViewClient.Charges.View.amount_2' |translate}} </th>
           <td mat-cell *matCellDef="let element" [ngClass]="{'strikeoff':element.reversed}"> {{element.amount}} </td>
         </ng-container>
 
         <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef> Actions </th>
+          <th mat-header-cell *matHeaderCellDef> {{'Client_Component.ViewClient.Charges.View.actions' |translate}} </th>
           <td mat-cell *matCellDef="let element" [ngClass]="{'strikeoff':element.reversed}">
             <button mat-raised-button color="primary" (click)="undoTransaction(element.id)" class="delBtn">
               <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;
@@ -124,7 +124,7 @@
 
 
     <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-      <button type="button" mat-raised-button [routerLink]="['../../','general']">Back</button>
+      <button type="button" mat-raised-button [routerLink]="['../../','general']">{{ "ShareButton.BackEng" | translate }}</button>
     </mat-card-actions>
 
   </mat-card>
