--- a/src/app/clients/clients-view/client-actions/close-client/close-client.component.html
+++ b/src/app/clients/clients-view/client-actions/close-client/close-client.component.html
@@ -9,24 +9,24 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Closed On Date</mat-label>
+            <mat-label>{{'Client_Component.ViewClient.Actions.CloseClient.closureDate' |translate}}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="closureDatePicker" required formControlName="closureDate">
             <mat-datepicker-toggle matSuffix [for]="closureDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #closureDatePicker></mat-datepicker>
             <mat-error *ngIf="closeClientForm.controls.closureDate.hasError('required')">
-              Closed On Date is <strong>required</strong>
+              {{'Client_Component.ViewClient.Actions.CloseClient.errclosureDate' |translate}}<strong>{{'Client_Component.ViewClient.Actions.strongRequired' |translate}}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Closure Reason</mat-label>
+            <mat-label>{{'Client_Component.ViewClient.Actions.CloseClient.closureReasonId' |translate}}</mat-label>
             <mat-select formControlName="closureReasonId">
               <mat-option *ngFor="let reason of closureData" [value]="reason.id">
                 {{ reason.name }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="closeClientForm.controls.closureReasonId.hasError('required')">
-              Closure Reason is <strong>required</strong>
+              {{'Client_Component.ViewClient.Actions.CloseClient.errclosureReasonId' |translate}}<strong>{{'Client_Component.ViewClient.Actions.strongRequired' |translate}}</strong>
             </mat-error>
           </mat-form-field>
 
@@ -35,8 +35,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../../']">Cancel</button>
-        <button mat-raised-button color="warn" [disabled]="!closeClientForm.valid">Confirm</button>
+        <button type="button" mat-raised-button [routerLink]="['../../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="warn" [disabled]="!closeClientForm.valid">{{ "ShareButton.ConfirmEng" | translate }}</button>
       </mat-card-actions>
 
     </form>
