--- a/src/app/clients/clients-view/client-actions/reject-client-transfer/reject-client-transfer.component.html
+++ b/src/app/clients/clients-view/client-actions/reject-client-transfer/reject-client-transfer.component.html
@@ -7,22 +7,22 @@
       <mat-card-content fxLayout="column">
 
         <mat-form-field>
-          <mat-label>Transfer Date</mat-label>
+          <mat-label>{{'Client_Component.ViewClient.Actions.RejectClientTransfer.transferDate' |translate}}</mat-label>
           <input matInput [matDatepicker]="transferDatePicker" required formControlName="transferDate">
           <mat-datepicker-toggle matSuffix [for]="transferDatePicker"></mat-datepicker-toggle>
           <mat-datepicker #transferDatePicker></mat-datepicker>
         </mat-form-field>
 
         <mat-form-field fxFlex>
-          <mat-label>Note</mat-label>
+          <mat-label>{{'Client_Component.ViewClient.Actions.RejectClientTransfer.note' |translate}}</mat-label>
           <textarea matInput formControlName="note"></textarea>
         </mat-form-field>
 
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!rejectClientTransferForm.valid">Confirm</button>
+        <button type="button" mat-raised-button [routerLink]="['../../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!rejectClientTransferForm.valid">{{ "ShareButton.ConfirmEng" | translate }}</button>
       </mat-card-actions>
 
     </form>
