--- a/src/app/clients/clients-view/client-actions/undo-client-rejection/undo-client-rejection.component.html
+++ b/src/app/clients/clients-view/client-actions/undo-client-rejection/undo-client-rejection.component.html
@@ -7,20 +7,20 @@
       <mat-card-content>
 
           <mat-form-field fxFlex>
-            <mat-label>Reopened On Date</mat-label>
+            <mat-label>{{'Client_Component.ViewClient.Actions.UndoClientRejection.reopenedDate' |translate}}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="reopenedDatePicker" required formControlName="reopenedDate">
             <mat-datepicker-toggle matSuffix [for]="reopenedDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #reopenedDatePicker></mat-datepicker>
             <mat-error *ngIf="undoClientRejectionForm.controls.reopenedDate.hasError('required')">
-              Reopened On Date is <strong>required</strong>
+              {{'Client_Component.ViewClient.Actions.UndoClientRejection.errreopenedDate' |translate}}<strong>{{'Client_Component.ViewClient.Actions.strongRequired' |translate}}</strong>
             </mat-error>
           </mat-form-field>
 
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../../']">Cancel</button>
-        <button mat-raised-button color="accent" [disabled]="!undoClientRejectionForm.valid">Confirm</button>
+        <button type="button" mat-raised-button [routerLink]="['../../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="accent" [disabled]="!undoClientRejectionForm.valid">{{ "ShareButton.ConfirmEng" | translate }}</button>
       </mat-card-actions>
 
     </form>
