--- a/src/app/clients/clients-view/client-actions/view-survey/view-survey.component.html
+++ b/src/app/clients/clients-view/client-actions/view-survey/view-survey.component.html
@@ -1,7 +1,7 @@
 <div class="container m-b-20" fxLayoutAlign="end">
   <button mat-raised-button color="primary" [routerLink]="['../Take Survey']">
     <fa-icon icon="edit"></fa-icon>&nbsp;&nbsp;
-    Take Survey
+    {{'Client_Component.ViewClient.Actions.ViewSurvey.btnTakeSurvey' |translate}}
   </button>
 </div>
 
@@ -10,7 +10,7 @@
 
   <div fxLayout="row">
     <mat-form-field fxFlex>
-      <mat-label>Filter</mat-label>
+      <mat-label>{{'Client_Component.ViewClient.Actions.ViewSurvey.Filter' |translate}}</mat-label>
       <input matInput (keyup)="applyFilter($event.target.value)">
     </mat-form-field>
   </div>
@@ -20,22 +20,22 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="surveyName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header='surveyName'> Survey </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header='surveyName'> {{'Client_Component.ViewClient.Actions.ViewSurvey.surveyName' |translate}} </th>
         <td mat-cell *matCellDef="let survey"> {{ survey.surveyName }} </td>
       </ng-container>
 
       <ng-container matColumnDef="createdBy">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header='createdBy'> Created By </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header='createdBy'> {{'Client_Component.ViewClient.Actions.ViewSurvey.createdBy' |translate}} </th>
         <td mat-cell *matCellDef="let survey"> {{ survey.createdBy }} </td>
       </ng-container>
 
       <ng-container matColumnDef="date">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Client_Component.ViewClient.Actions.ViewSurvey.date' |translate}} </th>
         <td mat-cell *matCellDef="let survey"> {{ survey.date | date }} </td>
       </ng-container>
 
       <ng-container matColumnDef="score">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Score </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Client_Component.ViewClient.Actions.ViewSurvey.score' |translate}} </th>
         <td mat-cell *matCellDef="let survey"> {{ survey.score }} </td>
       </ng-container>
 
