--- a/src/app/clients/clients-view/client-actions/withdraw-client/withdraw-client.component.html
+++ b/src/app/clients/clients-view/client-actions/withdraw-client/withdraw-client.component.html
@@ -9,24 +9,24 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Withdrawal Date</mat-label>
+            <mat-label>{{'Client_Component.ViewClient.Actions.WithdrawClient.withdrawalDate' |translate}}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="withdrawalDatePicker" required formControlName="withdrawalDate">
             <mat-datepicker-toggle matSuffix [for]="withdrawalDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #withdrawalDatePicker></mat-datepicker>
             <mat-error *ngIf="withdrawClientForm.controls.withdrawalDate.hasError('required')">
-              Withdrawal Date is <strong>required</strong>
+              {{'Client_Component.ViewClient.Actions.WithdrawClient.errwithdrawalDate' |translate}}<strong>{{'Client_Component.ViewClient.Actions.strongRequired' |translate}}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Withdrawal Reason</mat-label>
+            <mat-label>{{'Client_Component.ViewClient.Actions.WithdrawClient.withdrawalReasonId' |translate}}</mat-label>
             <mat-select formControlName="withdrawalReasonId">
               <mat-option *ngFor="let reason of withdrawalData" [value]="reason.id">
                 {{ reason.name }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="withdrawClientForm.controls.withdrawalReasonId.hasError('required')">
-              Withdrawal Reason is <strong>required</strong>
+              {{'Client_Component.ViewClient.Actions.WithdrawClient.errwithdrawalReasonId' |translate}}<strong>{{'Client_Component.ViewClient.Actions.strongRequired' |translate}}</strong>
             </mat-error>
           </mat-form-field>
 
@@ -35,8 +35,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!withdrawClientForm.valid">Confirm</button>
+        <button type="button" mat-raised-button [routerLink]="['../../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!withdrawClientForm.valid">{{ "ShareButton.ConfirmEng" | translate }}</button>
       </mat-card-actions>
 
     </form>
