--- a/src/app/clients/clients-view/custom-dialogs/upload-image-dialog/upload-image-dialog.component.html
+++ b/src/app/clients/clients-view/custom-dialogs/upload-image-dialog/upload-image-dialog.component.html
@@ -1,12 +1,12 @@
-<h1 mat-dialog-title>Upload Client Image</h1>
+<h1 mat-dialog-title>{{'Client_Component.ViewClient.CustomDialog.UploadImage.h1' |translate}}</h1>
 
 <div>
 
   <mifosx-file-upload flex="60%" (change)="onFileSelect($event)"></mifosx-file-upload>
 
   <mat-dialog-actions align="end">
-      <button mat-raised-button mat-dialog-close>Cancel</button>
-      <button mat-raised-button color="primary" [disabled]="!image" [mat-dialog-close]="image">Confirm</button>
+      <button mat-raised-button mat-dialog-close>{{ "ShareButton.CancelEng" | translate }}</button>
+      <button mat-raised-button color="primary" [disabled]="!image" [mat-dialog-close]="image">{{ "ShareButton.ConfirmEng" | translate }}</button>
   </mat-dialog-actions>
 
 </div>
