--- a/src/app/clients/clients-view/custom-dialogs/view-signature-dialog/view-signature-dialog.component.html
+++ b/src/app/clients/clients-view/custom-dialogs/view-signature-dialog/view-signature-dialog.component.html
@@ -1,15 +1,15 @@
-<h1 mat-dialog-title>View Client Signature</h1>
+<h1 mat-dialog-title>{{'Client_Component.ViewClient.CustomDialog.ViewSignature.h1' |translate}}</h1>
 
 <div *ngIf="signatureId" mat-dialog-content>
   <img [src]="signatureImage" alt="Signature">
 </div>
 
 <div *ngIf="!signatureId" mat-dialog-content>
-  <p>Client Signature is not provided.</p>
+  <p>{{'Client_Component.ViewClient.CustomDialog.ViewSignature.p' |translate}}</p>
 </div>
 
 <mat-dialog-actions align="end">
-  <button mat-raised-button mat-dialog-close>Close</button>
-  <button mat-raised-button *ngIf="signatureId" color="warn" [mat-dialog-close]="{ delete: true }">Delete</button>
+  <button mat-raised-button mat-dialog-close>{{ "ShareButton.CloseEng" | translate }}</button>
+  <button mat-raised-button *ngIf="signatureId" color="warn" [mat-dialog-close]="{ delete: true }">{{ "ShareButton.DeleteEng" | translate }}</button>
   <button mat-raised-button color="primary" [mat-dialog-close]="{ upload: true }">{{ signatureId ? 'Reupload' : 'Upload'}}</button>
 </mat-dialog-actions>
