--- a/src/app/clients/clients-view/datatable-tab/single-row/single-row.component.html
+++ b/src/app/clients/clients-view/datatable-tab/single-row/single-row.component.html
@@ -1,14 +1,14 @@
 <div class="tab-container mat-typography">
-  <h3>Thông tin bổ sung</h3>
+  <h3>{{'Client_Component.ViewClient.DataTable.SingleRow.h3' |translate}}</h3>
   <div fxLayout="row" fxLayoutAlign="flex-end">
     <button mat-raised-button color="primary" (click)="add()" *ngIf="!dataObject.data[0]">
-      <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;Add
+      <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;{{ "ShareButton.AddEng" | translate }}
     </button>
     <button mat-raised-button color="primary" (click)="edit()" *ngIf="dataObject.data[0]">
-      <fa-icon icon="edit"></fa-icon>&nbsp;&nbsp;Edit
+      <fa-icon icon="edit"></fa-icon>&nbsp;&nbsp;{{ "ShareButton.Edit" | translate }}
     </button>
     <button class="delete-button" mat-raised-button color="warn" (click)="delete()" *ngIf="dataObject.data[0]">
-      <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;Delete All
+      <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;{{ "ShareButton.DeleteAllEng" | translate }}
     </button>
   </div>
   <mat-list role="list" *ngIf="dataObject.data[0]">
