--- a/src/app/clients/clients-view/documents-tab/documents-tab.component.html
+++ b/src/app/clients/clients-view/documents-tab/documents-tab.component.html
@@ -3,34 +3,34 @@
     <!-- Documents Table -->
 
     <!-- <h3>Documents</h3> -->
-    <h3>Hồ sơ khách hàng</h3>
+    <h3>{{'Client_Component.ViewClient.Document.h3' |translate}}</h3>
 
     <button mat-raised-button class="f-right" color="primary" (click)="uploadDocument()" *midasHasPermission="'CREATE_DOCUMENT'" matTooltip="Thêm hồ sơ của khách hàng">
     <fa-icon icon="plus" ></fa-icon>
-    &nbsp;&nbsp; Thêm
+    &nbsp;&nbsp; {{'Client_Component.ViewClient.Document.btnAdd' |translate}}
   </button>
 
     <table mat-table #documentsTable [dataSource]="clientDocuments">
 
         <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Tên </th>
+            <th mat-header-cell *matHeaderCellDef> {{'Client_Component.ViewClient.Document.name' |translate}} </th>
             <td mat-cell *matCellDef="let document">
                 {{document.name}} </td>
         </ng-container>
 
         <ng-container matColumnDef="description">
-            <th mat-header-cell *matHeaderCellDef> Mô tả </th>
+            <th mat-header-cell *matHeaderCellDef> {{'Client_Component.ViewClient.Document.description' |translate}} </th>
             <td mat-cell *matCellDef="let document"> {{document.description}} </td>
         </ng-container>
 
         <ng-container matColumnDef="fileName">
-            <th mat-header-cell *matHeaderCellDef> Tên file </th>
+            <th mat-header-cell *matHeaderCellDef> {{'Client_Component.ViewClient.Document.fileName' |translate}} </th>
             <td mat-cell *matCellDef="let document"> {{document.fileName}}
             </td>
         </ng-container>
 
         <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef> Hành động </th>
+            <th mat-header-cell *matHeaderCellDef> {{'Client_Component.ViewClient.Document.actions' |translate}} </th>
             <td mat-cell *matCellDef="let document; let i = index">
                 <button class="document-action-button" mat-raised-button color="primary" (click)="download(document.parentEntityId,document.id)">
           <fa-icon icon="cloud-download-alt" matTooltip="Tải về"></fa-icon>
