--- a/src/app/clients/clients-view/family-members-tab/add-family-member/add-family-member.component.html
+++ b/src/app/clients/clients-view/family-members-tab/add-family-member/add-family-member.component.html
@@ -5,30 +5,32 @@
     <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutAlign="start center">
 
       <mat-form-field fxFlex="calc(50% - 25px)">
-        <mat-label>Họ</mat-label>
+        <mat-label>{{'Client_Component.ViewClient.FamilyMember.AddMember.firstName' |translate}}</mat-label>
         <input formControlName="firstName" required matInput />
         <mat-error *ngIf="addFamilyMemberForm.controls.firstName.hasError('required')">
           <!-- First Name is <strong>required</strong> -->
-          <strong>Yêu cầu:</strong> nhập họ của khách hàng
+          <strong>{{'Client_Component.ViewClient.FamilyMember.AddMember.strongRequest' |translate}}</strong>
+          {{'Client_Component.ViewClient.FamilyMember.AddMember.alert' |translate}}
         </mat-error>
       </mat-form-field>
 
       <mat-form-field fxFlex="calc(50% - 25px)">
-        <mat-label>Tên lót</mat-label>
+        <mat-label>{{'Client_Component.ViewClient.FamilyMember.AddMember.middleName' |translate}}</mat-label>
         <input formControlName="middleName" matInput />
       </mat-form-field>
 
       <mat-form-field fxFlex="calc(50% - 25px)">
-        <mat-label>Tên</mat-label>
+        <mat-label>{{'Client_Component.ViewClient.FamilyMember.AddMember.lastName' |translate}}</mat-label>
         <input formControlName="lastName" required matInput />
         <mat-error *ngIf="addFamilyMemberForm.controls.lastName.hasError('required')">
           <!-- Last Name is <strong>required</strong> -->
-          <strong>Yêu cầu:</strong> nhập Tên của người liên quan
+          <strong>{{'Client_Component.ViewClient.FamilyMember.AddMember.strongRequest' |translate}}</strong>
+          {{'Client_Component.ViewClient.FamilyMember.AddMember.alert2' |translate}}
         </mat-error>
-      </mat-form-field>  
+      </mat-form-field>
 
       <mat-form-field fxFlex="calc(50% - 25px)">
-        <mat-label>Quan hệ với khách hàng</mat-label>
+        <mat-label>{{'Client_Component.ViewClient.FamilyMember.AddMember.relationshipId' |translate}}</mat-label>
         <mat-select formControlName="relationshipId" required>
           <mat-option *ngFor="let relation of addFamilyMemberTemplate.relationshipIdOptions" [value]="relation.id">
             {{ relation.name  }}
@@ -36,12 +38,13 @@
         </mat-select>
         <mat-error *ngIf="addFamilyMemberForm.controls.relationshipId.hasError('required')">
           <!-- Relationship is <strong>required</strong> -->
-          <strong>Yêu cầu:</strong> nhập mối quan hệ giữa người liên quan và khách hàng.
+          <strong>{{'Client_Component.ViewClient.FamilyMember.AddMember.strongRequest' |translate}}</strong>
+          {{'Client_Component.ViewClient.FamilyMember.AddMember.alert3' |translate}}
         </mat-error>
       </mat-form-field>
 
       <mat-form-field fxFlex="calc(50% - 25px)">
-        <mat-label>Giới tính</mat-label>
+        <mat-label>{{'Client_Component.ViewClient.FamilyMember.AddMember.genderId' |translate}}</mat-label>
         <mat-select formControlName="genderId" required>
           <mat-option *ngFor="let gender of addFamilyMemberTemplate.genderIdOptions" [value]="gender.id">
             {{ gender.name }}
@@ -49,12 +52,13 @@
         </mat-select>
         <mat-error *ngIf="addFamilyMemberForm.controls.genderId.hasError('required')">
           <!-- Gender is <strong>required</strong> -->
-          <strong>Yêu cầu:</strong> nhập giới tính của người liên quan
+          <strong>{{'Client_Component.ViewClient.FamilyMember.AddMember.strongRequest' |translate}}</strong>
+          {{'Client_Component.ViewClient.FamilyMember.AddMember.alert4' |translate}}
         </mat-error>
       </mat-form-field>
 
       <mat-form-field fxFlex="calc(50% - 25px)">
-        <mat-label>Tình trạng hôn nhân</mat-label>
+        <mat-label>{{'Client_Component.ViewClient.FamilyMember.AddMember.maritalStatusId' |translate}}</mat-label>
         <mat-select formControlName="maritalStatusId">
           <mat-option *ngFor="let maritalStatus of addFamilyMemberTemplate.maritalStatusIdOptions"
             [value]="maritalStatus.id">
@@ -64,12 +68,12 @@
       </mat-form-field>
 
       <mat-form-field fxFlex="calc(50% - 25px)">
-        <mat-label>Trình độ</mat-label>
+        <mat-label>{{'Client_Component.ViewClient.FamilyMember.AddMember.qualification' |translate}}</mat-label>
         <input formControlName="qualification" matInput />
       </mat-form-field>
 
       <mat-form-field fxFlex="calc(50% - 25px)">
-        <mat-label>Chuyên môn</mat-label>
+        <mat-label>{{'Client_Component.ViewClient.FamilyMember.AddMember.professionId' |translate}}</mat-label>
         <mat-select formControlName="professionId">
           <mat-option *ngFor="let profession of addFamilyMemberTemplate.professionIdOptions" [value]="profession.id">
             {{ profession.name }}
@@ -78,33 +82,36 @@
       </mat-form-field>
 
       <mat-form-field fxFlex="calc(50% - 25px)">
-        <mat-label>Ngày sinh</mat-label>
+        <mat-label>{{'Client_Component.ViewClient.FamilyMember.AddMember.dateOfBirth' |translate}}</mat-label>
         <input formControlName="dateOfBirth" matInput [min]="minDate" [max]="maxDate" [matDatepicker]="dueDatePicker"
           (dateChange)="onChange($event)" required>
         <mat-datepicker-toggle matSuffix [for]="dueDatePicker"></mat-datepicker-toggle>
         <mat-datepicker #dueDatePicker></mat-datepicker>
         <mat-error *ngIf="addFamilyMemberForm.controls.dateOfBirth.hasError('required')">
           <!-- Date of birth  is <strong>required</strong> -->
-          <strong>Yêu cầu: </strong>Nhập ngày sinh của người liên quan
+          <strong>{{'Client_Component.ViewClient.FamilyMember.AddMember.strongRequest' |translate}}</strong>
+          {{'Client_Component.ViewClient.FamilyMember.AddMember.alert5' |translate}}
         </mat-error>
       </mat-form-field>
       <mat-form-field fxFlex="calc(50% - 25px)">
-        <mat-label>Tuổi</mat-label>
+        <mat-label>{{'Client_Component.ViewClient.FamilyMember.AddMember.age' |translate}}</mat-label>
         <input type="number" formControlName="age" required matInput readonly />
         <mat-error *ngIf="addFamilyMemberForm.controls.age.hasError('required')">
           <!-- Age is <strong>required</strong> -->
-          <strong>Yêu cầu:</strong> nhập tuổi của người liên quan
+          <strong>{{'Client_Component.ViewClient.FamilyMember.AddMember.strongRequest' |translate}}</strong>
+          {{'Client_Component.ViewClient.FamilyMember.AddMember.alert6' |translate}}
         </mat-error>
       </mat-form-field>
 
-      <mat-checkbox formControlName="isDependent" labelPosition="before" fxFlex="calc(50% - 25px)">Là người phụ thuộc:
+      <mat-checkbox formControlName="isDependent" labelPosition="before" fxFlex="calc(50% - 25px)">
+        {{'Client_Component.ViewClient.FamilyMember.AddMember.isDependent' |translate}}
       </mat-checkbox>
 
     </div>
-    
+
     <div fxLayout="row" fxLayoutGap="32px" fxLayoutAlign="center">
-      <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-      <button type="submit" mat-raised-button color="primary" [disabled]="!addFamilyMemberForm.valid">Submit</button>
+      <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+      <button type="submit" mat-raised-button color="primary" [disabled]="!addFamilyMemberForm.valid">{{ "ShareButton.Submit" | translate }}</button>
     </div>
 
   </form>
