--- a/src/app/clients/clients-view/family-members-tab/family-members-tab.component.html
+++ b/src/app/clients/clients-view/family-members-tab/family-members-tab.component.html
@@ -3,12 +3,12 @@
   <router-outlet>
 
     <!-- <h3>Family Members</h3> -->
-    <h3>Người liên quan</h3>
+    <h3>{{'Client_Component.ViewClient.FamilyMember.h3' |translate}}</h3>
 
     <div fxLayout="row" fxLayoutAlign="flex-end">
       <button mat-raised-button color="primary" [routerLink]="['./add']">
         <!-- <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;Add -->
-        <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp; Thêm
+        <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp; {{'Client_Component.ViewClient.FamilyMember.btnAdd' |translate}}
       </button>
     </div>
 
@@ -52,18 +52,18 @@
           Date Of Birth : {{member.dateOfBirth|date}}<br />
         </p> -->
         <p>
-          Họ : {{member.firstName}}<br />
-          Tên Lót : {{member.middleName}}<br />
-          Tên : {{member.lastName}}<br />
-          Date Of Birth : {{member.dateOfBirth|date}}<br />  
-          Tuổi : {{member.age}}<br />       
-          ĐTDD : {{member.mobileNumber}}<br />          
-          Là người phụ thuộc : {{member.isDependent}}<br />
-          Tình trạng hôn nhân : {{member.maritalStatus}}<br />
-          Giới tính : {{member.gender}}<br />
-          Chuyên môn : {{member.profession}}<br />
-          Trình độ : {{member.qualification}}<br />
-          
+          {{'Client_Component.ViewClient.FamilyMember.firstName' |translate}}{{member.firstName}}<br />
+          {{'Client_Component.ViewClient.FamilyMember.middleName' |translate}}{{member.middleName}}<br />
+          {{'Client_Component.ViewClient.FamilyMember.lastName' |translate}}{{member.lastName}}<br />
+          {{'Client_Component.ViewClient.FamilyMember.dateOfBirth' |translate}}{{member.dateOfBirth|date}}<br />
+          {{'Client_Component.ViewClient.FamilyMember.age' |translate}}{{member.age}}<br />
+          {{'Client_Component.ViewClient.FamilyMember.mobileNumber' |translate}}{{member.mobileNumber}}<br />
+          {{'Client_Component.ViewClient.FamilyMember.isDependent' |translate}}{{member.isDependent}}<br />
+          {{'Client_Component.ViewClient.FamilyMember.maritalStatus' |translate}}{{member.maritalStatus}}<br />
+          {{'Client_Component.ViewClient.FamilyMember.gender' |translate}}{{member.gender}}<br />
+          {{'Client_Component.ViewClient.FamilyMember.profession' |translate}}{{member.profession}}<br />
+          {{'Client_Component.ViewClient.FamilyMember.qualification' |translate}}{{member.qualification}}<br />
+
         </p>
 
       </mat-expansion-panel>
