--- a/src/app/clients/clients-view/ic-partner/ic-partner-tab.component.html
+++ b/src/app/clients/clients-view/ic-partner/ic-partner-tab.component.html
@@ -17,7 +17,7 @@
           <fa-icon icon="backward"></fa-icon>
         </button> -->
         <button mat-raised-button color="primary" (click)="addPartner()">
-          <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;Thêm đối tác
+          <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;{{'Client_Component.ViewClient.IcPartner.btnAdd' |translate}}
         </button>
       </div>
     </div>
@@ -25,28 +25,28 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> đối tác  </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Client_Component.ViewClient.IcPartner.name' |translate}}  </th>
         <td mat-cell *matCellDef="let partner"> {{ partner.displayName }} </td>
       </ng-container>
 
       <ng-container matColumnDef="partner">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Mã định danh </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Client_Component.ViewClient.IcPartner.partner' |translate}} </th>
         <td mat-cell *matCellDef="let partner"> {{ partner.externalId }} </td>
       </ng-container>
 
       <ng-container matColumnDef="rangeDay">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Ngày thêm</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'Client_Component.ViewClient.IcPartner.rangeDay' |translate}}</th>
         <td mat-cell *matCellDef="let partner"> {{partner.createdDate | date: "dd-MM-yyyy HH:mm:ss"}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Action">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Thao tác</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'Client_Component.ViewClient.IcPartner.Action' |translate}}</th>
         <td mat-cell *matCellDef="let partner">
            <!-- <mat-slide-toggle [checked]="partner.isBad" (change)="onToggle($event, partner.externalId)">
             Slide to update status
           </mat-slide-toggle>  -->
           <button mat-raised-button color="primary" (click)="deletePartner(partner.externalId)">
-            <fa-icon icon="trash-alt"></fa-icon> &nbsp;Xóa
+            <fa-icon icon="trash-alt"></fa-icon> &nbsp;{{'Client_Component.ViewClient.IcPartner.btnDelete' |translate}}
           </button>
         </td>
       </ng-container>
