--- a/src/app/clients/clients-view/identities-tab/add-identities/add-identities.component.html
+++ b/src/app/clients/clients-view/identities-tab/add-identities/add-identities.component.html
@@ -49,12 +49,12 @@
   </mat-form-field>
 
   <mat-form-field *ngIf="form.contains('dueDay')" fxFlex="48%">
-    <mat-label>Ngày thanh toán(vd: 03 --> ngày 3 hàng tháng):</mat-label>
+    <mat-label>{{ "Client_Component.ViewClient.TabIdentities.dueDay" | translate }}</mat-label>
     <input required pattern maxlength="2" matInput type="number" max="31" min="0" formControlName="dueDay" />
   </mat-form-field>
 
   <mat-form-field *ngIf="form.contains('expiredDate')" fxFlex="48%">
-    <mat-label>Ngày hết hạn (vd: 10/24 --> tháng 10 năm 2024):</mat-label>
+    <mat-label>{{ "Client_Component.ViewClient.TabIdentities.dueDay" | translate }}</mat-label>
     <input
       required
       matInput
@@ -68,19 +68,19 @@
   </mat-form-field>
 
   <mat-form-field *ngIf="form.contains('limitCard')" fxFlex="48%">
-    <mat-label>Hạn mức thẻ:</mat-label>
+    <mat-label>{{ "Client_Component.ViewClient.TabIdentities.limitCard" | translate }}</mat-label>
     <input currencyMask required matInput type="text" formControlName="limitCard" />
   </mat-form-field>
 
   <mat-form-field *ngIf="form.contains('classCard')" fxFlex="48%">
-    <mat-label>Hạng thẻ:</mat-label>
+    <mat-label>{{ "Client_Component.ViewClient.TabIdentities.rankCard" | translate }}</mat-label>
     <!-- <input
       matInput
       type="text"
       required
       formControlName="classCard"> -->
     <mat-select matNativeControl formControlName="classCard">
-      <mat-option value="" selected>-----Chọn hạng thẻ-----</mat-option>
+      <mat-option value="" selected>{{ "Client_Component.ViewClient.TabIdentities.optionRankCard" | translate }}</mat-option>
       <mat-option *ngFor="let cCARD of classCardEnum" [value]="cCARD">
         {{ cCARD }}
       </mat-option>
