--- a/src/app/clients/clients-view/identities-tab/identities-tab.component.html
+++ b/src/app/clients/clients-view/identities-tab/identities-tab.component.html
@@ -3,14 +3,14 @@
     <mat-card class="card-custom m-b-10" fxFlex="100%">
       <mat-card-header>
         <mat-card-title class="f-left" fxLayout="start center"
-          >Danh sách thẻ giao dịch: &nbsp;&nbsp;&nbsp;
+          >{{'Client_Component.ViewClient.Identities.listCard' |translate}} &nbsp;&nbsp;&nbsp;
           <button
             mat-flat-button
             class="f-right"
             (click)="addIdentifier(false)"
             color="accent"
             *midasHasPermission="'CREATE_CLIENTIDENTIFIER'"
-            matTooltip="Tạo thêm thông tin thẻ"
+            [matTooltip]="'Client_Component.ViewClient.Identities.ToolTipCreate'| translate"
           >
             <fa-icon icon="plus"></fa-icon>&nbsp;<fa-icon icon="credit-card"></fa-icon>
           </button>
@@ -24,7 +24,7 @@
             <td fxHide mat-cell *matCellDef="let identity">{{ identity.id }}</td>
           </ng-container>
           <ng-container matColumnDef="documentKey">
-            <th mat-header-cell *matHeaderCellDef>Số thẻ</th>
+            <th mat-header-cell *matHeaderCellDef>{{'Client_Component.ViewClient.Identities.documentKey' |translate}}</th>
             <td mat-cell *matCellDef="let identity; let i = index">
               {{ identity.documentKey }}
               <br />
@@ -33,29 +33,29 @@
                 (click)="deleteIdentifier(identity.clientId, identity.id, i, false)"
                 *midasHasPermission="'DELETE_CLIENTIDENTIFIER'"
                 icon="times"
-                matTooltip="Hủy thông tin thẻ"
+                [matTooltip]="'Client_Component.ViewClient.Identities.ToolTipDeleteCardInfo'| translate"
               ></fa-icon>
               &nbsp;
               <fa-icon
                 style="color: blue; margin-left: 5px"
                 (click)="addEditExtraInfo(identity.clientId, identity.id, identity.documentKey, i, true)"
                 icon="address-card"
-                matTooltip="Thông tin chi tiết của thẻ"
+                [matTooltip]="'Client_Component.ViewClient.Identities.ToolTipCardInfo'| translate"
               ></fa-icon>
             </td>
           </ng-container>
           <ng-container matColumnDef="description">
-            <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>Thông tin thẻ</th>
+            <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>{{'Client_Component.ViewClient.Identities.description' |translate}}</th>
             <td fxHide fxShow.gt-md mat-cell *matCellDef="let identity">{{ identity.description }}</td>
           </ng-container>
 
           <ng-container matColumnDef="type">
-            <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>Loại</th>
+            <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>{{'Client_Component.ViewClient.Identities.type' |translate}}</th>
             <td fxHide fxShow.gt-md mat-cell *matCellDef="let identity">{{ identity.documentType.name }}</td>
           </ng-container>
 
           <ng-container matColumnDef="documents">
-            <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef matTooltip="Hình ảnh CMND/CCCD">Đính kèm</th>
+            <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef matTooltip="Hình ảnh CMND/CCCD">{{'Client_Component.ViewClient.Identities.documents' |translate}}</th>
             <td fxHide fxShow.gt-md mat-cell *matCellDef="let identity; let ind = renderIndex">
               <div *ngFor="let document of identity.documents">
                 {{ document.name }}
@@ -75,7 +75,7 @@
           </ng-container>
 
           <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef>Trạng thái giữ thẻ</th>
+            <th mat-header-cell *matHeaderCellDef>{{'Client_Component.ViewClient.Identities.status' |translate}}</th>
             <td mat-cell *matCellDef="let identity">
               <!-- {{ identity.status === "clientIdentifierStatusType.active" ? "A" : "-" }} -->
               <!-- <section class="example-section">
@@ -98,7 +98,7 @@
           </ng-container>
 
           <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef>Hành động</th>
+            <th mat-header-cell *matHeaderCellDef>{{'Client_Component.ViewClient.Identities.actions' |translate}}</th>
             <td mat-cell *matCellDef="let identity; let i = index">
               <button
                 class="action-button"
@@ -106,7 +106,7 @@
                 color="primary"
                 (click)="routeToMakeTransaction(identity.id, 'cash', identity.documentKey)"
                 *midasHasPermission="'TXN_CREATE'"
-                matTooltip="Cash"
+                [matTooltip]="'Client_Component.ViewClient.Identities.ToolTipCash'| translate"
               >
                 <i class="fas fa-money-bill-wave"></i>
               </button>
@@ -117,7 +117,7 @@
                 color="warn"
                 *midasHasPermission="'TXN_CREATE'"
                 (click)="routeToMakeTransaction(identity.id, 'rollTerm', identity.documentKey)"
-                matTooltip="Advance"
+                [matTooltip]="'Client_Component.ViewClient.Identities.ToolTipAdvance'| translate"
               >
                 <i class="fas fa-hand-holding-usd"></i>
               </button>
@@ -159,7 +159,7 @@
     <mat-card class="card-custom" fxFlex="100%">
       <mat-card-header>
         <mat-card-title
-          >Danh sách tài khoản thanh toán/CMND/CCCD:&nbsp;&nbsp;&nbsp;
+          >{{'Client_Component.ViewClient.Identities.title' |translate}}&nbsp;&nbsp;&nbsp;
           <button
             mat-raised-button
             class="f-right"
@@ -176,11 +176,11 @@
         <table mat-table #identifiersTableOther [dataSource]="clientIdentitiesOther" class="mat-elevation-z8"
                multiTemplateDataRows matSort>
           <ng-container matColumnDef="id">
-            <th fxHide  mat-header-cell *matHeaderCellDef>Id</th>
+            <th fxHide  mat-header-cell *matHeaderCellDef>{{'Client_Component.ViewClient.Identities.id' |translate}}</th>
             <td fxHide mat-cell *matCellDef="let identity">{{ identity.id }}</td>
           </ng-container>
           <ng-container matColumnDef="documentKey">
-            <th mat-header-cell *matHeaderCellDef>Số CMND/CCCD |TK Bank</th>
+            <th mat-header-cell *matHeaderCellDef>{{'Client_Component.ViewClient.Identities.documentKey2' |translate}}</th>
             <td mat-cell *matCellDef="let identity; let i = index">
               {{ identity.documentKey }}
               <fa-icon
@@ -192,17 +192,17 @@
             </td>
           </ng-container>
           <ng-container matColumnDef="description">
-            <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>Miêu tả</th>
+            <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>{{'Client_Component.ViewClient.Identities.description2' |translate}}</th>
             <td fxHide fxShow.gt-md mat-cell *matCellDef="let identity">{{ identity.description }}</td>
           </ng-container>
 
           <ng-container matColumnDef="type">
-            <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>Loại</th>
+            <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>{{'Client_Component.ViewClient.Identities.type2' |translate}}</th>
             <td fxHide fxShow.gt-md mat-cell *matCellDef="let identity">{{ identity.documentType.name }}</td>
           </ng-container>
 
           <ng-container matColumnDef="documents">
-            <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>Đính kèm</th>
+            <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>{{'Client_Component.ViewClient.Identities.documents2' |translate}}</th>
             <td fxHide fxShow.gt-md mat-cell *matCellDef="let identity; let ind = renderIndex">
               <div *ngFor="let document of identity.documents">
                 {{ document.name }}
@@ -256,7 +256,7 @@
   <div fxFlex.gt-md="30" fxFlex.lt-md="100%" fxLayoutAlign="center start" fxLayout="column" class="tab-container" >
     <mat-card class="card-custom" fxFlex="100%" fxLayout="column">
       <mat-card-header fxFlex="100%" fxLayoutAlign="center center">
-        <h3>Hình ảnh CMND/CCCD/PASSPORT:</h3>
+        <h3>{{'Client_Component.ViewClient.Identities.h3' |translate}}</h3>
       </mat-card-header>
       <mat-card-content *ngFor="let identity of clientIdentitiesOther" >
         <div fxFlex="100%" fxLayout="column" fxLayoutAlign="start center" *ngIf="identity?.documents">
